--- a/style.css
+++ b/style.css
@@ -3,23 +3,9 @@ body{
     padding: 0;
     box-sizing: border-box;
 }
-.container{
-    width: 50%;
-    height: 600px;
+.overflow{
+    width: 500px;
+    height: 200px;
     border: 1px solid green;
-    margin: auto;
-    position: relative;
-}
-.box{
-    width: 200px;
-    height: 100px;
-    background-color: black;
-    color: #ffff;
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    left: 0;
-    top: 0;
-    margin: auto;
-  
+    overflow-y:scroll ;
 }
